force-app/main/default/objects/Patient_Delegate__c/Patient_Delegate__c.object-meta.xml
<CustomObject>
    <label>Patient Delegate</label>
    <nameField>
        <displayFormat>PD-{00000000}</displayFormat>
        <label>Patient Delegate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Delegates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>