force-app/main/default/objects/Patient_Delegate__c/fields/Attestation__c.field-meta.xml
<CustomField>
    <fullName>Attestation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attestation</label>
    <type>Checkbox</type>
</CustomField>