force-app/main/default/objects/Patient_Delegate__c/fields/Attestation_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Attestation_TimeStamp__c</fullName>
    <label>Attestation TimeStamp</label>
    <type>DateTime</type> 
</CustomField>