force-app/main/default/objects/Patient_Delegate__c/fields/Attested_by__c.field-meta.xml
<CustomField>
    <fullName>Attested_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attested by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Delegates (Attested by)</relationshipLabel>
    <relationshipName>Patient_Delegates</relationshipName>
    <type>Lookup</type>
</CustomField>