force-app/main/default/objects/Patient_Delegate__c/fields/isInviteToPP__c.field-meta.xml
<CustomField>
    <fullName>isInviteToPP__c</fullName>
    <defaultValue>false</defaultValue>
	<description>Once Delegate gets invited to PP it gets enabled</description>
	<label>isInviteToPP</label>
	<type>Checkbox</type>
</CustomField>