force-app/main/default/objects/Patient_Delegate__c/fields/Participant_Delegate__c.field-meta.xml
<CustomField>
    <fullName>Participant_Delegate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Delegate</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Patient Delegates (Participant Delegate)</relationshipLabel>
    <relationshipName>Participant_Delegate</relationshipName>
    <type>Lookup</type>
</CustomField>