force-app/main/default/objects/Patient_Delegate__c/fields/Primary_Delegate__c.field-meta.xml
<CustomField>
    <fullName>Primary_Delegate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Delegate</label>
    <type>Checkbox</type>
</CustomField>